{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 26,
  "lineage": "24c99905-7b42-a1d5-02b5-1e466d282173",
  "resources": [
    {
      "module": "module.compute",
      "mode": "data",
      "type": "aws_security_group",
      "name": "dallow_http_ssh-id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:security-group/sg-088ca010d6336b0cb",
            "description": "Allow http inbound traffic",
            "filter": null,
            "id": "sg-088ca010d6336b0cb",
            "name": "allow_http",
            "tags": {
              "Name": "allow_http_ssh",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a7cdec59a66096e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "data",
      "type": "aws_subnet",
      "name": "dsubnet-a-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:subnet/subnet-0695958bb82b81bd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0695958bb82b81bd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840175130015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "subnet-a-private",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "vpc_id": "vpc-09a7cdec59a66096e"
          }
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "data",
      "type": "aws_subnet",
      "name": "dsubnet-a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:subnet/subnet-0b9216a6722e289f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9216a6722e289f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "840175130015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "subnet-a-public",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "vpc_id": "vpc-09a7cdec59a66096e"
          }
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "data",
      "type": "aws_subnet",
      "name": "dsubnet-b-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:subnet/subnet-02bba0a98093c279f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02bba0a98093c279f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840175130015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "subnet-b-private",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "vpc_id": "vpc-09a7cdec59a66096e"
          }
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "data",
      "type": "aws_subnet",
      "name": "dsubnet-b-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:subnet/subnet-0094eeb2719f4e06f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0094eeb2719f4e06f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "840175130015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "subnet-b-public",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "vpc_id": "vpc-09a7cdec59a66096e"
          }
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fa00d4c63e32376",
            "arn": "arn:aws:ec2:us-east-1:840175130015:instance/i-02969bbba6a7b5eea",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02969bbba6a7b5eea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webserver",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05553cb9f9079072c",
            "private_dns": "ip-10-0-0-138.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.138",
            "public_dns": "ec2-3-80-57-136.compute-1.amazonaws.com",
            "public_ip": "3.80.57.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00bd15dbc8f1ae19c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b9216a6722e289f5",
            "tags": {
              "Name": "webserver_task1"
            },
            "tags_all": {
              "Name": "webserver_task1",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-088ca010d6336b0cb"
            ]
          },
          "dependencies": [
            "module.compute.aws_key_pair.webserver_key",
            "module.compute.data.aws_subnet.dsubnet-a-public",
            "module.compute.tls_private_key.webserver_private_key",
            "module.network.aws_subnet.subnet-a-public",
            "module.network.aws_vpc.vpc-adolfo",
            "module.security-groups.aws_security_group.allow_http_ssh",
            "module.security-groups.data.aws_vpc.dvpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-ng-adolfo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055c89f1e27c0a1d5",
            "domain": "vpc",
            "id": "eipalloc-055c89f1e27c0a1d5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-175-97-118.compute-1.amazonaws.com",
            "public_ip": "35.175.97.118",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-ng-adolfo"
            },
            "tags_all": {
              "Name": "eip-ng-adolfo",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig-adolfo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:internet-gateway/igw-06438d6fac0acd37f",
            "id": "igw-06438d6fac0acd37f",
            "owner_id": "840175130015",
            "tags": {
              "Name": "ig-adolfo"
            },
            "tags_all": {
              "Name": "ig-adolfo",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "vpc_id": "vpc-09a7cdec59a66096e"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ng-adolfo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055c89f1e27c0a1d5",
            "connectivity_type": "public",
            "id": "nat-05526f32d828ab3c8",
            "network_interface_id": "eni-0d784d0d353324421",
            "private_ip": "10.0.0.180",
            "public_ip": "35.175.97.118",
            "subnet_id": "subnet-0b9216a6722e289f5",
            "tags": {
              "Name": "ng-adolfo"
            },
            "tags_all": {
              "Name": "ng-adolfo",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            }
          },
          "dependencies": [
            "module.network.aws_eip.eip-ng-adolfo",
            "module.network.aws_internet_gateway.ig-adolfo",
            "module.network.aws_subnet.subnet-a-public",
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-private-adolfo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:route-table/rtb-0906582293a1fe635",
            "id": "rtb-0906582293a1fe635",
            "owner_id": "840175130015",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05526f32d828ab3c8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private-adolfo"
            },
            "tags_all": {
              "Name": "rt-private-adolfo",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a7cdec59a66096e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eip-ng-adolfo",
            "module.network.aws_internet_gateway.ig-adolfo",
            "module.network.aws_nat_gateway.ng-adolfo",
            "module.network.aws_subnet.subnet-a-public",
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-public-adolfo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:route-table/rtb-0354ba2d31d0ab4db",
            "id": "rtb-0354ba2d31d0ab4db",
            "owner_id": "840175130015",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06438d6fac0acd37f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public-adolfo"
            },
            "tags_all": {
              "Name": "rt-public-adolfo",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a7cdec59a66096e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.ig-adolfo",
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "adolfo-a-priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e74d9bf7127beb0d",
            "route_table_id": "rtb-0906582293a1fe635",
            "subnet_id": "subnet-0695958bb82b81bd0"
          },
          "dependencies": [
            "module.network.aws_eip.eip-ng-adolfo",
            "module.network.aws_internet_gateway.ig-adolfo",
            "module.network.aws_nat_gateway.ng-adolfo",
            "module.network.aws_route_table.rt-private-adolfo",
            "module.network.aws_subnet.subnet-a-private",
            "module.network.aws_subnet.subnet-a-public",
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "adolfo-a-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1833e8801657a56",
            "route_table_id": "rtb-0354ba2d31d0ab4db",
            "subnet_id": "subnet-0b9216a6722e289f5"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.ig-adolfo",
            "module.network.aws_route_table.rt-public-adolfo",
            "module.network.aws_subnet.subnet-a-public",
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "adolfo-b-priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f76a6e0989f2a6ad",
            "route_table_id": "rtb-0906582293a1fe635",
            "subnet_id": "subnet-02bba0a98093c279f"
          },
          "dependencies": [
            "module.network.aws_eip.eip-ng-adolfo",
            "module.network.aws_internet_gateway.ig-adolfo",
            "module.network.aws_nat_gateway.ng-adolfo",
            "module.network.aws_route_table.rt-private-adolfo",
            "module.network.aws_subnet.subnet-a-public",
            "module.network.aws_subnet.subnet-b-private",
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "adolfo-b-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0916f8241697e9fc9",
            "route_table_id": "rtb-0354ba2d31d0ab4db",
            "subnet_id": "subnet-0094eeb2719f4e06f"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.ig-adolfo",
            "module.network.aws_route_table.rt-public-adolfo",
            "module.network.aws_subnet.subnet-b-public",
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-a-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:subnet/subnet-0695958bb82b81bd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0695958bb82b81bd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840175130015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-a-private"
            },
            "tags_all": {
              "Name": "subnet-a-private",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "vpc_id": "vpc-09a7cdec59a66096e"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:subnet/subnet-0b9216a6722e289f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9216a6722e289f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "840175130015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-a-public"
            },
            "tags_all": {
              "Name": "subnet-a-public",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "vpc_id": "vpc-09a7cdec59a66096e"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-b-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:subnet/subnet-02bba0a98093c279f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02bba0a98093c279f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840175130015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-b-private"
            },
            "tags_all": {
              "Name": "subnet-b-private",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "vpc_id": "vpc-09a7cdec59a66096e"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-b-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:subnet/subnet-0094eeb2719f4e06f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0094eeb2719f4e06f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "840175130015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-b-public"
            },
            "tags_all": {
              "Name": "subnet-b-public",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "vpc_id": "vpc-09a7cdec59a66096e"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-adolfo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:vpc/vpc-09a7cdec59a66096e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0190b2cdefa7d18c5",
            "default_route_table_id": "rtb-02f99da03b73c9fd4",
            "default_security_group_id": "sg-0e703f6393389c5d8",
            "dhcp_options_id": "dopt-09d57686001c6faeb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09a7cdec59a66096e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f99da03b73c9fd4",
            "owner_id": "840175130015",
            "tags": {
              "Name": "adolfo-vpc"
            },
            "tags_all": {
              "Name": "adolfo-vpc",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            }
          }
        }
      ]
    },
    {
      "module": "module.security-groups",
      "mode": "data",
      "type": "aws_vpc",
      "name": "dvpc-adolfo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:vpc/vpc-09a7cdec59a66096e",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0640c8bdf41da7e77",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-09d57686001c6faeb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09a7cdec59a66096e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02f99da03b73c9fd4",
            "owner_id": "840175130015",
            "tags": {
              "Name": "adolfo-vpc",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            }
          }
        }
      ]
    },
    {
      "module": "module.security-groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:security-group/sg-088ca010d6336b0cb",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088ca010d6336b0cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "840175130015",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http_ssh"
            },
            "tags_all": {
              "Name": "allow_http_ssh",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a7cdec59a66096e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc-adolfo",
            "module.security-groups.data.aws_vpc.dvpc-adolfo"
          ]
        }
      ]
    }
  ]
}